2004-01-09  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (ppc_before_allocation): Clear cached
	program_header_size.

2004-01-06  Alexandre Oliva  <aoliva@redhat.com>

	2003-11-28  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/elf32frvfd.sh (EMBEDDED): Clear.
	2003-11-05  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/elf32frvfd.sh (STACK_ADDR): Unset.
	(MAXPAGESIZE): Set to 64Kb.
	(OTHER_READONLY_SECTIONS): Define __ROFIXUP_LIST__ and
	__ROFIXUP_END__.  Don't map .rofixup.got any more.
	* emulparams/elf32frv.sh (NOP): Set.
	2003-10-31  Alexandre Oliva  <aoliva@redhat.com>
	* configure.tgt: Add frv-*-*linux*.
	2003-09-30  Alexandre Oliva  <aoliva@redhat.com>
	* Makefile.am (ALL_EMULATIONS): Added eelf32frvfd.o.
	(eelf32frvfd.c): New.
	* configure.tgt <frv-*-*>: Added it to targ_extra_emuls.
	* emulparams/elf32frv.sh: Reverted previous two patches.
	* emulparams/elf32frvfd.sh: New.
	* Makefile.in: Rebuilt.
	2003-09-18  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/elf32frv.sh (OTHER_READONLY_SECTIONS): Added
	.rofixup.got to .rofixup.
	2003-09-15  Alexandre Oliva  <aoliva@redhat.com>
	* emulparams/elf32frv.sh (MAXPAGESIZE): Make it 256KiB, not 256B.
	(TEMPLATE_NAME, GENERATE_SHLIB_SCRIPT): Set.

2004-01-05  Jakub Jelinek  <jakub@redhat.com>

	* emulparams/elf_s390.sh (NO_SMALL_DATA): Set to yes.
	* emulparams/elf64_s390.sh (NO_SMALL_DATA): Set to yes.

2004-01-03  Alan Modra  <amodra@bigpond.net.au>

	* ldexp.c (align_n): Make static.
	* ldexp.h (align_n): Delete declaration.
	* ldlang.h (lang_enter_output_section_statement): Remove
	block_value param.
	* ldlang.c (lang_enter_output_section_statement): Likewise.
	(TO_ADDR, TO_SIZE): Define.
	(opb_shift): New var.
	(init_opb): New function.
	(print_input_section): Call init_opb and use TO_ADDR.
	(print_data_statement, print_reloc_statement): Likewise.
	(print_padding_statement): Likewise.
	(size_input_section): Use TO_SIZE and TO_ADDR, and global opb_shift.